Something new in December 2012
- com.v2sot.AndLib.ui.fonts.FontMager - class for managing custom application fonts