@@ -7,7 +7,8 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent" 
+        android:cacheColorHint="@null">
     </ListView>
 
 </LinearLayout>
