@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.v2soft.AndLib.ui.Animation;
+package com.v2soft.AndLib.ui.animation;
 
 import android.util.Log;
 import android.view.View;
